# crucible

./: Cargo.toml  Makefile  README.md
contracts/crucible/: Cargo.toml
contracts/crucible/src/: account.rs  cost.rs  env.rs  env_event_filter_tests.rs  event_topic_match.rs  lib.rs  macros.rs  prelude.rs  reputation.rs  sim.rs  time_helpers.rs  token.rs
contracts/crucible/test_snapshots/account/fixture_tests/: fixture_with_account_handles_supports_debug_clone_and_reset.1.json
contracts/crucible/test_snapshots/account/tests/: test_account_builder_fluent.1.json
contracts/crucible/test_snapshots/env/extra_tests/: test_fork_creates_independent_accounts.1.json
contracts/crucible/test_snapshots/env_event_filter_tests/tests/: events_matching_and_events_parsed_agree_on_topic_filters.1.json
contracts/crucible/test_snapshots/macros/tests/: test_assert_emitted_finds_event_among_others.1.json
contracts/crucible/test_snapshots/reputation/test/: test_reputation_get_unset_returns_zero.1.json
contracts/crucible/test_snapshots/sim/extra_tests/: test_inspected_tx_borrows_local_client.1.json
contracts/crucible/test_snapshots/token/tests/: test_admin_rotation_tracked.1.json  test_approve_and_check_allowance.1.json  test_clawback_reduces_balance.1.json  test_decimals_stored_and_accessible.1.json  test_mint_and_check_balance.1.json  test_new_token_with_symbol_and_decimals.1.json  test_raw_asset_client_authorized_query.1.json  test_raw_token_client_decimals_query.1.json  test_raw_token_client_transfer_without_auth_reverts.1.json  test_token_admin_is_observable.1.json  (+2 more)
(+88 files in other folders)
